# gstreamer-example

./: Cargo.toml  flake.nix
samples/: hammy.webm
scripts/: download_videos.sh
src/: main.rs
