[package]
name = "gstreamer-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] } 
gstreamer = "0.21.1"
gstreamer-app = "0.21.1"
gstreamer-video = "0.21.1"
